--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -40,6 +40,7 @@
 }
 @media (max-width: 768px) {
   .glass-card {
+      margin-top: 150vh; /* Adjust position for mobile */
       flex-direction: column; /* Stack div 2 and 3 vertically */
       padding: 25px;
   }
@@ -55,6 +56,32 @@
       margin-bottom: 20px;
   }
 }
+@media (max-width: 1180px) {
+  .glass-card {
+    margin-top: 5vh; /* Adjust position for mobile */
+  }
+}
+@media (max-width: 1100px) {
+  .glass-card {
+    margin-top: 10vh; /* Adjust position for mobile */
+  }
+}
+@media (max-width: 1030px) {
+  .glass-card {
+    margin-top: 20vh; /* Adjust position for mobile */
+  }
+}
+@media (max-width: 930px) {
+  .glass-card {
+    margin-top: 30vh; /* Adjust position for mobile */
+  }
+}
+@media (max-width: 830px) {
+  .glass-card {
+    margin-top: 40vh; /* Adjust position for mobile */
+  }
+}
+
 
 .headline{
   position: absolute;
