--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,22 +1,28 @@
 <main-header></main-header>
 <main style="width: 100%; background-color: black;">
   <!-- Background -->
-  <div style="width: 100%; padding: 0; margin: 0">
+  <div class="container-fluid p-0">
+    <img src="assets/images/home/TopBG.png"
+        class="img-fluid w-100 d-block"
+        draggable="false">
 
-    <img src="assets/images/home/TopBG.png" style="width:100%; display: block;" draggable="false">
-    <img src="assets/images/home/2ndBG.png" style="width: 100%;" draggable="false">
+    <img src="assets/images/home/2ndBG.png"
+        class="img-fluid w-100"
+        draggable="false">
+  </div>
+
+
+  <div class="container">
 
     <div class="headline">
-      <p class="xxldisplay" style="margin:0 0 2vh 0; text-wrap:inherit;">RELIABLE PARTNER AND SOLUTION PROVIDER</p>
+      <p class="xxldisplay">RELIABLE PARTNER AND SOLUTION PROVIDER</p>
       <p class="largeEmphasizedTitle" style="margin:0;">The leading industrial and educational solutions provider in the
         Philippines</p>
     </div>
 
-  </div>
+    <div class="glass-card" style="padding-left: 6%; padding-right: 6%;">
 
-  <div class="glass-card" style="padding-left: 6%; padding-right: 6%;">
-
-    <div class="card-column">
+      <div class="card-column">
         <div class="video-container position-relative">
           <video id="myVideo" class="rounded" preload="none" poster="assets/images/home/CIRCLEHytecPower.png">
             <source src="assets/videos/HytecMainVideo.mp4" type="video/mp4">
@@ -34,47 +40,54 @@
             </svg>
           </div>
         </div>
-    </div>
-    
-    <div class="card-column">
-        <div class="title-badge">
-          <p class="ldisplay">WHO WE ARE</p>
-          <div class="red-bar"></div>
-        </div>
-        <p class="mediumTitle" style="white-space: pre-line;">
-          We started this journey with only the desire to build a better industry and future. Now, the
-          responsibility we have on our hands is more than what we have ever imagined and we are prepared to face
-          the challenges no matter how heavy or difficult it may be.
-          <br><br>The company's own endeavors are not the only ideals held important. Hytec Power Inc wants to
-          ensure that the help provided serves to inspire Filipino to strive for their own goals in developing a
-          prosperous and globally competitive society.
-          <br><br>We took the opportunity to provide further assistance to educational institutions in making their
-          programs relevant with industry needs. Providing new technologies, pioneering new industrial processes,
-          and 21st didactic practices.
-        </p>
-        <button class="mediumEmphasizedTitle readmore btn btn-primary mt-3">
-          Read More
-        </button>
+      </div>
+
+      
+      <div class="card-column">
+          <div class="title-badge">
+            <p class="ldisplay">WHO WE ARE</p>
+            <div class="red-bar"></div>
+          </div>
+          <p class="mediumTitle" style="white-space: pre-line;">
+            We started this journey with only the desire to build a better industry and future. Now, the
+            responsibility we have on our hands is more than what we have ever imagined and we are prepared to face
+            the challenges no matter how heavy or difficult it may be.
+            <br><br>The company's own endeavors are not the only ideals held important. Hytec Power Inc wants to
+            ensure that the help provided serves to inspire Filipino to strive for their own goals in developing a
+            prosperous and globally competitive society.
+            <br><br>We took the opportunity to provide further assistance to educational institutions in making their
+            programs relevant with industry needs. Providing new technologies, pioneering new industrial processes,
+            and 21st didactic practices.
+          </p>
+          <button class="mediumEmphasizedTitle readmore btn btn-primary mt-3">
+            Read More
+          </button>
+      </div>
+
     </div>
 
   </div>
 
 
-
-  <div class="achievement">
-    <div class="achievementMain">
+  <div class="achievement container">
+    <div class="row text-center justify-content-center achievementMain">
 
       <!-- Loop through the list -->
-      <div *ngFor="let item of achievementList">
+      <div class="col-6 col-md-4 col-lg-2 mb-4" *ngFor="let item of achievementList">
         <!-- Bind the value (e.g., 30+) -->
-        <p class="xxldisplay accent-text">{{ item.value }}</p>
+        <p class="xxldisplay accent-text mb-1">{{ item.value }}</p>
 
         <!-- Bind the label (e.g., Years of Excellence) -->
-        <p class="smallEmphasizedHeadline">{{ item.label }}</p>
+        <p class="smallEmphasizedHeadline mb-0">{{ item.label }}</p>
       </div>
 
     </div>
   </div>
+
+
+
+
+  
 
   <div
     style="width:100%; height:max-content; display: flex; justify-content: center; align-items: center;padding: 10vh 0; position: relative;">
