--- a/src/app/pages/company/about-us/about-us.scss
+++ b/src/app/pages/company/about-us/about-us.scss
@@ -235,7 +235,7 @@
 
 .timeline-container {
   position: relative;
-  width: 90%;
+  width: 85vw;
   margin: 0 auto;
   min-height: max-content;
 }
@@ -276,16 +276,16 @@
   padding-left: calc(50% + 40px);
 }
 
-.timeline-item.left .timeline-content {
+.timeline-item.left .timeline-box {
   text-align: right;
 }
 
-.timeline-item.right .timeline-content {
+.timeline-item.right .timeline-box {
   text-align: right;
 }
 
-.timeline-content {
-  background: color.$secondaryAlpha10;
+.timeline-box {
+  background: color.$container;
   border: 1px solid color.$secondaryAlpha10;
   border-radius: 12px;
   padding: 24px 28px 0;
@@ -330,7 +330,7 @@
   box-shadow: 0 0 0 4px rgba(255, 0, 0, 0.2);
 }
 
-.timeline-content:hover {
+.timeline-box:hover {
   border-color: rgba(255, 0, 0, 0.3);
   transition: all 0.3s ease;
 }
@@ -340,15 +340,15 @@
   transition: all 0.3s ease;
 }
 
-.distributorship {
+.distributorship-container {
   width: 85vw;
   height: max-content;
-  color: white;
+  color: color.$neutral100;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background: color.$secondaryAlpha5;
+  background: color.$container;
   border: 1px solid color.$secondaryAlpha10;
   gap: 2vh;
   padding: 2.5vh 0 4.5vh;
